jinfer: drop unnecessary preview flag